solutions/autopilot-spot-regular-lb/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-spot
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIp
  selector:
    app: app1-spot
  ports:
  - name: http
    port: 80 # Service's port
    protocol: TCP
    targetPort: 8080
---
