solutions/autopilot-spot-regular-lb/service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-neg
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    myapp: app
  ports:
  - name: http
    port: 80 # Service's port
    protocol: TCP
    targetPort: 8080
---
