solutions/autopilot-spot-regular-lb/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-node-port
spec:
  type: NodePort
  selector:
    myapp: app
  ports:
  - name: http
    port: 80 # Service's port
    protocol: TCP
    targetPort: 8080
---
