solutions/autopilot-spot-regular-lb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-lb
spec:
  type: LoadBalancer
  selector:
    myapp: app
  ports:
  - name: http
    port: 80 # Service's port
    protocol: TCP
    targetPort: 8080
---
