solutions/autopilot-spot-regular-lb/ingress-cluster.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  app-spot-ingress-one-svc
  annotations:
    kubernetes.io/ingress.class:  "gce"
spec:
  defaultBackend:
    service:
      name: app-neg
      port:
        number: 80
